Fix in css for side scrollbar causing content movement when switching partials

--- a/refactor/meancms/public/app.css
+++ b/refactor/meancms/public/app.css
@@ -1,5 +1,9 @@
 /* app css stylesheet */
 
+html {
+  overflow-y: scroll;
+}
+
 .menu {
   list-style: none;
   border-bottom: 0.1em solid black;
